<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="5">

    <TextView
        android:id="@+id/textview1"
        style="@style/event_detail_first_column"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/set_date" />

    <EditText
        android:id="@+id/edit_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0" />

    <TextView
        android:id="@+id/textview2"
        style="@style/event_detail_first_column"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/set_type" />

    <Spinner
        android:id="@+id/spinner_type_selection"
        style="@style/event_detail_second_column"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textview3"
        style="@style/event_detail_first_column"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/set_quantity" />


    <LinearLayout
        style="@style/event_detail_second_column"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_row="3"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/button_predefined_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/arrow_down_float"
            android:layout_gravity="bottom" />
    </LinearLayout>


</GridLayout>
